--- a/public/main.css
+++ b/public/main.css
@@ -26,5 +26,33 @@ h1 {
 
 .counter{
     color: blue;
+    font-size: 1.25em;
     margin-top: 0.5em;
+}
+
+.buttonList{
+    margin-bottom: 1em;
+}
+
+.buttonList button{
+    border-radius: 1em;
+    font-size: 1.3em;
+    width: 10em;
+    margin-right: 0.5em;
+    border-color:  blue;
+    color: blue;
+    background-color: white;
+}
+.completed {
+    margin-left: 0.5em;
+    border-radius: 1em;
+    color: green;
+    font-size : 1.0em;
+}
+
+.delete{
+    margin-left: 0.5em;
+    border-radius: 1em;
+    color: red;
+    font-size : 1.0em;
 }
