--- a/public/main.css
+++ b/public/main.css
@@ -43,16 +43,33 @@ h1 {
     color: blue;
     background-color: white;
 }
+
+.buttonList button:hover{
+    cursor: pointer;
+    opacity: 0.5;
+}
+
+
+.todoName{
+    width: 25em;
+    font-size: 1.15em;
+    display: inline-block;
+}
+
 .completed {
-    margin-left: 0.5em;
-    border-radius: 1em;
+    margin-left: 3em;
+    border-radius: 0.75em;
+    border-color: green;
+    background-color: white;
     color: green;
     font-size : 1.0em;
 }
 
 .delete{
     margin-left: 0.5em;
-    border-radius: 1em;
+    border-color: red;
+    border-radius: 0.75em;
     color: red;
     font-size : 1.0em;
+    background-color: white;
 }
