Added favourite option

--- a/public/main.css
+++ b/public/main.css
@@ -51,7 +51,7 @@ h1 {
 
 
 .todoName{
-    width: 25em;
+    width: 20em;
     font-size: 1.15em;
     display: inline-block;
 }
@@ -63,13 +63,57 @@ h1 {
     background-color: white;
     color: green;
     font-size : 1.0em;
+    display: inline-block;
 }
 
 .delete{
-    margin-left: 0.5em;
+    margin-left: 3.0em;
     border-color: red;
     border-radius: 0.75em;
     color: red;
-    font-size : 1.0em;
+    font-weight: bold;
+    font-size : 1.2em;
     background-color: white;
+    display: inline-block;
+}
+
+.fav{
+    color: yellow;
+    margin-right: 1.0em;
+    font-size:2em;
+    text-shadow: -1px 0 #000000,0 1px #000000,1px 0 #000000,0 -1px #000000;
+    display: inline-block;
+}
+
+.fav:hover{
+    cursor: pointer;
+}
+
+.submitForm {
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+
+.submitForm button {
+    border-radius: 0.35em;
+    border-color: blue;
+    color: blue;
+    font-weight: bold;
+    font-size : 1.3em;
+    background-color: white;
+}
+
+.submitForm button:hover {
+    cursor: pointer;
+    opacity: 0.5;
+}
+
+.submitForm input {
+    border-color: blue;
+    border-radius: 0.35em;
+    font-size : 1.3em;
+}
+
+.todolist {
+    list-style-type: none;
 }
