added date/time to insertions,  deelte complete gets transparent when there are no completed tasks - this replaced the button disappearing

--- a/public/main.css
+++ b/public/main.css
@@ -6,7 +6,8 @@ body {
 }
 
 header {
-    background-color: #4CAF50;
+    text-align: center;
+    margin-bottom: 3em;
     padding: 0.5em 1em;
 }
 
@@ -19,7 +20,8 @@ h1 {
 
 h1 {
     display: block;
-    font-size: 34px;
+    font-size: 3em;
+    margin-top: 1em;
     line-height: 34px;
     color: rgba(1, 1, 255, 0.87);
 }
@@ -51,9 +53,15 @@ h1 {
 
 
 .todoName{
-    width: 20em;
+    width: 35em;
     font-size: 1.15em;
     display: inline-block;
+}
+
+.date{
+    font-size: 1.15em;
+    display: inline-block;
+    font-style: italic;
 }
 
 .completed {
@@ -116,4 +124,16 @@ h1 {
 
 .todolist {
     list-style-type: none;
+}
+
+.noDeleteComplete{
+    border-radius: 1em;
+    font-size: 1.3em;
+    width: 10em;
+    margin-right: 0.5em;
+    border-color:  blue;
+    color: blue;
+    background-color: white;
+    opacity: 0.35;
+    margin-bottom: 1em;
 }
